--- a/index.html
+++ b/index.html
@@ -1151,7 +1151,7 @@
               <p class="mt-3">Have questions about our services? I'm ready to help you find data-driven solutions for your needs.</p>
             </div>
             <div class="lets-talk-form" style="flex: 1; min-width: 280px;">
-              <form class="talk-form" netlify>
+              <form action="https://formspree.io/f/xanevkda" method="POST">
                 <div class="form-group mb-3">
                   <label for="talk-name">Full Name</label>
                   <input type="text" id="talk-name" name="name" required class="form-control">
@@ -1164,8 +1164,13 @@
                   <label for="talk-message">Message</label>
                   <textarea id="talk-message" name="message" rows="5" required class="form-control"></textarea>
                 </div>
+                <!-- Honeypot field for spam prevention -->
+                <input type="text" name="_gotcha" style="display:none">
+                <!-- Subject for your email -->
+                <input type="hidden" name="_subject" value="New message from your portfolio">
                 <button type="submit" class="btn btn-primary w-100">SEND MESSAGE</button>
               </form>
+              <div id="form-message" class="mt-3"></div>
             </div>
           </div>
         </div>
