--- a/index.html
+++ b/index.html
@@ -916,10 +916,11 @@
         <h6 class="hero-subtitle">Hello, I'm</h6>
         <h1 class="hero-title">
           <span class="name-gradient">Sagar Pawar</span>
+          <p> </p>
           <span class="typed-text"></span>
         </h1>
         <p class="hero-description">
-          Specialized in uncovering data insights using <span class="skill-tag">SQL</span>, 
+          Eficient in analyzing data to extract meaningful insights that support business decisions<span class="skill-tag">SQL</span>, 
           <span class="skill-tag">Python</span>, <span class="skill-tag">Power BI</span>, 
           and <span class="skill-tag">Excel</span>. Driven to support business decisions through actionable data.
         </p>
@@ -961,11 +962,11 @@
   <main class="container py-5">
     <section id="about" class="reveal">
       <h2 class="section-title">About Me</h2>
-      <p>Hello! I'm Sagar Narayan Pawar, an aspiring data analyst passionate about transforming data into actionable insights. I specialize in using tools like Python, SQL, Power BI, and Excel to analyze and visualize data.</p>
+      <p>Hello! I'm Sagar Narayan Pawar, an aspiring data analyst passionate about transforming data into actionable insights. I Have knowledge of in using tools like Python, SQL, Power BI, and Excel to analyze and visualize data.</p>
     </section>
 
     <section id="projects" class="reveal">
-      <h2 class="section-title">Projects</h2>
+      <h2 class="section-title">My Projects</h2>
 
       <div class="project-card reveal">
         <h4>Credit Card Financial Dashboard | Power BI Project</h4>
@@ -993,7 +994,7 @@
 <section id="skills" class="reveal">
   <div class="container py-5">
     <h2 class="section-title">Skills & Tools</h2>
-    <p class="mb-5">Technologies and tools I've mastered over the past 3 years.</p>
+<!--     <p class="mb-5">Technologies and tools I've mastered over the past 3 years.</p> -->
     
     <div class="row justify-content-center">
         <!-- Data Column -->
@@ -1116,7 +1117,7 @@
                     <h4>HSC – Science</h4>
                     <div class="timeline-date">Feb 2017</div>
                     <div class="percentage-badge">Maharashtra State Board</div>
-                    <p>Studied core science subjects with an introduction to computing and logical thinking. Developed an interest in technology and pursued further studies in the IT domain.</p>
+<!--                     <p>Studied core science subjects with an introduction to computing and logical thinking. Developed an interest in technology and pursued further studies in the IT domain.</p> -->
                     <div class="courses">
                     <span class="course-badge">Physics</span>
                     <span class="course-badge">Chemistry</span>
