--- a/index.html
+++ b/index.html
@@ -920,7 +920,7 @@
           <span class="typed-text"></span>
         </h1>
         <p class="hero-description">
-          Eficient in analyzing data to extract meaningful insights that support business decisions<span class="skill-tag">SQL</span>, 
+          Efficient in analyzing data to extract meaningful insights that support business decisions<span class="skill-tag">SQL</span>, 
           <span class="skill-tag">Python</span>, <span class="skill-tag">Power BI</span>, 
           and <span class="skill-tag">Excel</span>. Driven to support business decisions through actionable data.
         </p>
